--- a/Eixo5_Aula#7_TechInclusao_Josiley/index.html
+++ b/Eixo5_Aula#7_TechInclusao_Josiley/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <title>Página teste</title>
         <link rel="stylesheet" href="estilo.css">
     </head>
     <body>
